--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "homepage": "https://microweber.org/modules/microweber-modules/dynamic_text",
   "authors": [
     {
-      "name": "Bozhidar Slaveykov",
-      "email": "bobi@microweber.com"
+      "name": "MW Team",
+      "email": "team@microweber.com"
     }
   ],
   "keywords": [
